pagination, api authentication and refactor
